<resources>
    <string name="app_name">My Tour Assistent</string>
    <string name="brukernavn">Username</string>
    <string name="passord">Password</string>
    <string name="login">Login</string>
    <string name="glemt_passord">Forgot password</string>
    <string name="registrere">Register</string>
    <string name="rediger">Edit user</string>
    <string name="epost">Email</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_first_name">Firstname</string>
    <string name="register_last_name">Lastname</string>
    <string name="already_registered_login">Already registered?</string>
    <string name="title_activity_tour">My tours</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_settings">Settings</string>


    <!-- Add Tour -->
    <string name="tv_input_tour_name">Tour name</string>
    <string name="tv_input_tour_start_time">Start time tour</string>
    <string name="tv_input_tour_finish_time">Finish time for tour</string>
    <string name="rb_walking">Walking</string>
    <string name="rb_bicycling">Bicycling</string>
    <string name="rb_skiing">Skiing</string>
    <string name="tv_add_tour_title">New tour</string>
    <string name="btn_choose_on_map">Choose tour on map</string>
    <string name="btn_edit_on_map">Edit tour on map</string>
    <string name="btn_add_new_tour">Add new tour</string>
    <string name="toast_empty_date">Date is empty</string>
    <string name="toast_empty_name">Name is empty</string>
    <string name="toast_empty_tourtype">Please choose tour type</string>

    <!-- Tours list -->
    <string name="tours_list_title">Title: </string>
    <string name="tours_list_date">Planned start date: </string>
    <string name="tours_list_status">Status: </string>
    <string name="tours_list_type">Tour type: </string>
    <string name="tours_list_details">Details</string>
    <string name="tours_list_start">Start</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- tour type -->
    <string name="tour_type_bicycling">Biking </string>
    <string name="tour_type_walking">Walking </string>
    <string name="tour_type_skiing">Skiing </string>

    <!-- tour status -->
    <string name="status_not_started">Not started </string>
    <string name="status_active">Active </string>
    <string name="status_paused">Paused </string>
    <string name="status_completed">Completed </string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btn_clear">Clear plan</string>
    <string name="btn_finished">Finished</string>
    <string name="toast_empty_geopoints">Please select some points</string>
    <string name="tour_list_status_completed">Completed</string>
    <string name="tour_list_status_started">Started</string>
    <string name="tour_list_status_new">Not started</string>
    <string name="btn_reset_route">Reset</string>
    <string name="btn_start_tracking">Start</string>
    <string name="btn_stop_tracking">Stop</string>
    <string name="btn_pause_tracking">Pause</string>
    <string name="btn_take_picture">Take photo</string>
    <string name="tour_detail_start_date_planned">Start date planned:</string>
    <string name="tour_detail_finish_date_planned">"Finish date planned: "</string>
    <string name="tour_detail_tour_type">"Tour type: "</string>
    <string name="tv_tracking_started">Tracking going on</string>
    <string name="tv_tracking_paused">Tracking paused</string>
    <string name="tv_tracking_completed">Tracking completed</string>
    <string name="tv_tracking_reset">Tracking restarted</string>


</resources>