<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewAddTour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTourFragment">

    <TextView
        android:id="@+id/tvInputTourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_input_tour_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddTourTitle" />

    <EditText
        android:id="@+id/etTourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/tv_add_tour_title"
        android:ems="10"
        android:hint="@string/tv_add_tour_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputTourName" />

    <TextView
        android:id="@+id/tvInputTourDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_input_tour_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTourName" />

    <TextView
        android:id="@+id/tvInputNrOfDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_input_nr_of_days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTourDate" />

    <TextView
        android:id="@+id/tvInputNrOfHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_input_nr_of_hours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toEndOf="@+id/tvInputNrOfDays"
        app:layout_constraintTop_toBottomOf="@+id/etTourDate" />

    <EditText
        android:id="@+id/etTourDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/tv_input_tour_date"
        android:ems="10"
        android:hint="@string/tv_input_tour_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputTourDate" />

    <EditText
        android:id="@+id/etNrOfDays"
        android:layout_width="92dp"
        android:layout_height="49dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/tv_input_nr_of_days"
        android:ems="10"
        android:hint="@string/tv_input_nr_of_days"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInputNrOfDays" />

    <EditText
        android:id="@+id/etNrOfHours"
        android:layout_width="98dp"
        android:layout_height="44dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/tv_input_nr_of_hours"
        android:ems="10"
        android:hint="@string/tv_input_nr_of_hours"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etNrOfDays"
        app:layout_constraintTop_toBottomOf="@+id/tvInputNrOfHours" />

    <RadioGroup
        android:id="@+id/rgTourType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNrOfDays">

        <RadioButton
            android:id="@+id/rbWalking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_directions_walk_24"
            android:text="@string/rb_walking" />

        <RadioButton
            android:id="@+id/rbBicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_directions_bike_24"
            android:text="@string/rb_bicycling" />

        <RadioButton
            android:id="@+id/rbSkiing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_downhill_skiing_24"
            android:text="@string/rb_skiing" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAddTourTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tv_add_tour_title"
        android:textSize="@dimen/title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChooseOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btn_choose_on_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTourType" />

    <Button
        android:id="@+id/btnAddNewTour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_add_new_tour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseOnMap"
        app:layout_constraintVertical_bias="0.285" />
</androidx.constraintlayout.widget.ConstraintLayout>